--- a/public/index.html
+++ b/public/index.html
@@ -300,7 +300,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <!-- Custom JavaScript -->
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 
     <div id="clickPrompt" style="display: none; color: white; margin-top: 10px;"></div>
 
