--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,7 @@
                     </select>
                 </div>
                 <button type="submit">Book Your FREE DEMO</button>
+                <div id="clickPrompt" style="display: none;"></div>
             </form>
         </div>
     </section>
@@ -341,8 +342,6 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <!-- Custom JavaScript -->
     <script src="script.js"></script>
-
-    <div id="clickPrompt" style="display: none; color: white; margin-top: 10px;"></div>
 
 </body>
 </html>
