section image change

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
         <h2>The Sri Academics Commitment to Students</h2>
         <div class="commitment-content">
             <div class="student-image">
-                <img src="../public/src/images/background-image-2.svg" alt="Student studying in Sri Academics">
+                <img src="/public/src/images/background-image-2.svg" alt="Student studying in Sri Academics">
             </div>
             <div class="commitment-points">
                 <div class="commitment-point">
