--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="../public/src/icons/sri-academics-logo.svg" alt="CBSE">
+            <img src="/src/icons/sri-academics-logo.svg" alt="CBSE">
             <h1>Sri Academics</h1>
         </div>
         
@@ -17,11 +17,11 @@
             <button class="contact-btn">Contact Us</button>
             <div class="dropdown-content">
                 <a href="https://wa.me/your_number_here" target="_blank">
-                    <img src="../public/src/icons/whatsapp.svg" alt="WhatsApp">
+                    <img src="/src/icons/whatsapp.svg" alt="WhatsApp">
                     WhatsApp
                 </a>
                 <a href="mailto:your_email@example.com">
-                    <img src="../public/src/icons/email.svg" alt="Email">
+                    <img src="/src/icons/email.svg" alt="Email">
                     Email
                 </a>
             </div>
@@ -73,7 +73,7 @@
         <h2>The Sri Academics Commitment to Students</h2>
         <div class="commitment-content">
             <div class="student-image">
-                <img src="/public/src/images/background-image-2.svg" alt="Student studying in Sri Academics">
+                <img src="/src/images/background-image-2.svg" alt="Student studying in Sri Academics">
             </div>
             <div class="commitment-points">
                 <div class="commitment-point">
@@ -110,36 +110,36 @@
             <div class="board-icons">
                 <!-- Top row icons -->
                 <div class="board-icon">
-                    <img src="../public/src/icons/notes.svg" alt="IGCSE">
+                    <img src="/src/icons/notes.svg" alt="IGCSE">
                 </div>
                 <div class="board-icon">
-                    <img src="../public/src/icons/notes.svg" alt="SAT">
+                    <img src="/src/icons/notes.svg" alt="SAT">
                 </div>
                 <div class="board-icon">
-                    <img src="../public/src/icons/notes.svg" alt="IB">
+                    <img src="/src/icons/notes.svg" alt="IB">
                 </div>
                 <div class="board-icon">
-                    <img src="../public/src/icons/notes.svg" alt="NEET">
+                    <img src="/src/icons/notes.svg" alt="NEET">
                 </div>
                 <div class="board-icon">
-                    <img src="../public/src/icons/notes.svg" alt="CAMBRIDGE">
+                    <img src="/src/icons/notes.svg" alt="CAMBRIDGE">
                 </div>
                 
                 <!-- Bottom row icons -->
                 <div class="board-icon">
-                    <img src="../public/src/icons/notes.svg" alt="CBSE">
+                    <img src="/src/icons/notes.svg" alt="CBSE">
                 </div>
                 <div class="board-icon">
-                    <img src="../public/src/icons/notes.svg" alt="ICSE">
+                    <img src="/src/icons/notes.svg" alt="ICSE">
                 </div>
                 <div class="board-icon">
-                    <img src="../public/src/icons/notes.svg" alt="AP">
+                    <img src="/src/icons/notes.svg" alt="AP">
                 </div>
                 <div class="board-icon">
-                    <img src="../public/src/icons/notes.svg" alt="JEE">
+                    <img src="/src/icons/notes.svg" alt="JEE">
                 </div>
                 <div class="board-icon">
-                    <img src="../public/src/icons/notes.svg" alt="AS/O-LEVEL">
+                    <img src="/src/icons/notes.svg" alt="AS/O-LEVEL">
                 </div>
             </div>
 
@@ -168,37 +168,37 @@
         <div class="benefits-grid">
             <div class="benefit-item">
                 <div class="benefit-icon">
-                    <img src="../public/src/icons/notes.svg" alt="Counselor Icon">
+                    <img src="/src/icons/notes.svg" alt="Counselor Icon">
                 </div>
                 <p class="benefit-text">Dedicated Academic Counselor</p>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">
-                    <img src="../public/src/icons/notes.svg" alt="Curriculum Icon">
+                    <img src="/src/icons/notes.svg" alt="Curriculum Icon">
                 </div>
                 <p class="benefit-text">Customized Session As Per Individual Board/Curriculum</p>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">
-                    <img src="../public/src/icons/notes.svg" alt="Parenting Icon">
+                    <img src="/src/icons/notes.svg" alt="Parenting Icon">
                 </div>
                 <p class="benefit-text">Learning Leaders For Free Parenting Counseling</p>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">
-                    <img src="../public/src/icons/notes.svg" alt="Report Card Icon">
+                    <img src="/src/icons/notes.svg" alt="Report Card Icon">
                 </div>
                 <p class="benefit-text">Monthly Report Cards For Parents</p>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">
-                    <img src="../public/src/icons/notes.svg" alt="Assessment Icon">
+                    <img src="/src/icons/notes.svg" alt="Assessment Icon">
                 </div>
                 <p class="benefit-text">Weekly Online Assessments And Evaluations</p>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">
-                    <img src="../public/src/icons/notes.svg" alt="Learning Style Icon">
+                    <img src="/src/icons/notes.svg" alt="Learning Style Icon">
                 </div>
                 <p class="benefit-text">Natural Learning Style Methodology Adopted</p>
             </div>
@@ -210,7 +210,7 @@
         <div class="testimonials-grid">
             <div class="testimonial-card">
                 <div class="testimonial-image">
-                    <img src="../public/src/icons/notes.svg" alt="Sai Shreya">
+                    <img src="/src/icons/notes.svg" alt="Sai Shreya">
                 </div>
                 <h3 class="testimonial-name">Student 1</h3>
                 <p class="testimonial-grade">Grade: 8 | CBSE NEET</p>
@@ -218,7 +218,7 @@
             </div>
             <div class="testimonial-card">
                 <div class="testimonial-image">
-                    <img src="../public/src/icons/notes.svg" alt="Pradeep Krupanandan">
+                    <img src="/src/icons/notes.svg" alt="Pradeep Krupanandan">
                 </div>
                 <h3 class="testimonial-name">Student 2</h3>
                 <p class="testimonial-grade">Grade: 3 | CBSE, NEET</p>
@@ -226,7 +226,7 @@
             </div>
             <div class="testimonial-card">
                 <div class="testimonial-image">
-                    <img src="../public/src/icons/notes.svg" alt="Mishika">
+                    <img src="/src/icons/notes.svg" alt="Mishika">
                 </div>
                 <h3 class="testimonial-name">Student 3</h3>
                 <p class="testimonial-grade">Grade: 10 | CBSE, IIT-JEE</p>
@@ -234,7 +234,7 @@
             </div>
             <div class="testimonial-card">
                 <div class="testimonial-image">
-                    <img src="../public/src/icons/notes.svg" alt="Pranavi Reddy">
+                    <img src="/src/icons/notes.svg" alt="Pranavi Reddy">
                 </div>
                 <h3 class="testimonial-name">Student 4</h3>
                 <p class="testimonial-grade">Grade: 7 | CBSE NEET</p>
@@ -242,7 +242,7 @@
             </div>
             <div class="testimonial-card">
                 <div class="testimonial-image">
-                    <img src="../public/src/icons/notes.svg" alt="Sabarish R">
+                    <img src="/src/icons/notes.svg" alt="Sabarish R">
                 </div>
                 <h3 class="testimonial-name">Student 5</h3>
                 <p class="testimonial-grade">Grade: 9 | CBSE Board</p>
@@ -250,7 +250,7 @@
             </div>
             <div class="testimonial-card">
                 <div class="testimonial-image">
-                    <img src="../public/src/icons/notes.svg" alt="Zarka Khan">
+                    <img src="/src/icons/notes.svg" alt="Zarka Khan">
                 </div>
                 <h3 class="testimonial-name">Student 6</h3>
                 <p class="testimonial-grade">Grade: 12 | CBSE</p>
@@ -329,10 +329,10 @@
                 <a href="terms.html" target="_blank">Terms and conditions</a>
             </div>
             <div class="social-icons">
-                <a href="https://wa.me/918889857170?text=interested" target="_blank" class="social-icon"><img src="../icons/whatsapp.svg" alt="WhatsApp"></a>
-                <a href="#" class="social-icon"><img src="../icons/linkedin.svg" alt="LinkedIn"></a>
-                <a href="https://www.instagram.com/pandeymanan024" target="_blank" class="social-icon"><img src="../icons/instagram.svg" alt="Instagram"></a>
-                <a href="#" class="social-icon"><img src="../icons/youtube.svg" alt="YouTube"></a>
+                <a href="https://wa.me/918889857170?text=interested" target="_blank" class="social-icon"><img src="/icons/whatsapp.svg" alt="WhatsApp"></a>
+                <a href="#" class="social-icon"><img src="/icons/linkedin.svg" alt="LinkedIn"></a>
+                <a href="https://www.instagram.com/pandeymanan024" target="_blank" class="social-icon"><img src="/icons/instagram.svg" alt="Instagram"></a>
+                <a href="#" class="social-icon"><img src="/icons/youtube.svg" alt="YouTube"></a>
             </div>
         </div>
     </footer>
