page1 and page 2

--- a/public/index.html
+++ b/public/index.html
@@ -160,11 +160,22 @@
                     <select id="board" required>
                         <option value="" disabled selected>Board</option>
                         <option value="cbse">CBSE</option>
+                        <option value="igcse">IGCSE</option>
                         <option value="icse">ICSE</option>
-                        <option value="state">State Board</option>
+                        <option value="sat">SAT</option>
+                        <option value="ap">AP</option>
+                        <option value="ib">IB</option>
+                        <option value="jee">JEE</option>
+                        <option value="neet">NEET</option>
+                        <option value="as/o-level">AS/O-LEVEL</option>
+                        <option value="cambridge">CAMBRIDGE</option>
                     </select>
                     <select id="grade" required>
                         <option value="" disabled selected>Grade</option>
+                        <option value="4">4th</option>
+                        <option value="5">5th</option>
+                        <option value="6">6th</option>
+                        <option value="7">7th</option>
                         <option value="8">8th</option>
                         <option value="9">9th</option>
                         <option value="10">10th</option>
