changes done for whatsapp and insta connection link

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
         <div class="contact-dropdown">
             <button class="contact-btn">Contact Us</button>
             <div class="dropdown-content">
-                <a href="https://wa.me/8889857170" target="_blank">
-                    <img src="/src/icons/whatsapp.svg" alt="WhatsApp">
+                <a href="https://wa.me/+91 7772094431" target="_blank">
+                    <img src="../public/src/icons/whatsapp.svg" alt="WhatsApp">
                     WhatsApp
                 </a>
                 <a href="mailto:your_email@example.com">
@@ -198,19 +198,19 @@
             <div class="commitment-points">
                 <div class="commitment-point">
                     <span class="point-icon"></span>
-                    <p>We complement conventional classroom training, focusing on the formative growth of the student</p>
+                    <p>Personalized Learning: Tailored lessons that cater to your unique learning style and pace.</p>
                 </div>
                 <div class="commitment-point">
                     <span class="point-icon"></span>
-                    <p>We offer excellent faculty from top institutions and contemporary teaching methods</p>
+                    <p>Expert Tutors: Learn from qualified and experienced tutors who specialize in your subjects.</p>
                 </div>
                 <div class="commitment-point">
                     <span class="point-icon"></span>
-                    <p>We conduct assessments, reviews, PTM, tests and analyse skills and limitations</p>
+                    <p>One-on-One Focus: Every lesson is all about you—your goals, your pace, your success.</p>
                 </div>
                 <div class="commitment-point">
                     <span class="point-icon"></span>
-                    <p>We prepare students for long-term career with a focus on attitude and aptitude</p>
+                    <p>Real-Time Interaction: Get immediate feedback and ask questions during live one-on-one sessions.</p>
                 </div>
             </div>
         </div>
@@ -237,37 +237,37 @@
                 <div class="benefit-icon">
                     <img src="/src/icons/notes.svg" alt="Counselor Icon">
                 </div>
-                <p class="benefit-text">Dedicated Academic Counselor</p>
+                <p class="benefit-text">Customized Learning Plans</p>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">
                     <img src="/src/icons/notes.svg" alt="Curriculum Icon">
                 </div>
-                <p class="benefit-text">Customized Session As Per Individual Board/Curriculum</p>
+                <p class="benefit-text">Expert Tutors at Your Fingertips</p>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">
                     <img src="/src/icons/notes.svg" alt="Parenting Icon">
                 </div>
-                <p class="benefit-text">Learning Leaders For Free Parenting Counseling</p>
+                <p class="benefit-text">Live, Interactive Sessions</p>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">
                     <img src="/src/icons/notes.svg" alt="Report Card Icon">
                 </div>
-                <p class="benefit-text">Monthly Report Cards For Parents</p>
+                <p class="benefit-text">Flexible Scheduling</p>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">
                     <img src="/src/icons/notes.svg" alt="Assessment Icon">
                 </div>
-                <p class="benefit-text">Weekly Online Assessments And Evaluations</p>
+                <p class="benefit-text">Affordable and Accessible</p>
             </div>
             <div class="benefit-item">
                 <div class="benefit-icon">
                     <img src="/src/icons/notes.svg" alt="Learning Style Icon">
                 </div>
-                <p class="benefit-text">Natural Learning Style Methodology Adopted</p>
+                <p class="benefit-text">Get Matched with the Right Tutor</p>
             </div>
         </div>
     </section>
@@ -349,11 +349,11 @@
             </div>
             <div class="faq-item">
                 <div class="faq-question">
-                    Will I get class notes and assignments?
+                    WHAT COURSES DO WE OFFER ?
                     <span class="faq-toggle">&#9660;</span>
                 </div>
                 <div class="faq-answer">
-                    Yes, every class has assignments linked to it. Class notes can be downloaded right after the class is over.
+                    At Sri Academics, we offer a wide range of customized one-on-one live classes designed to meet the diverse academic needs of students across various curricula and competitive exams. Our expert tutors specialize in major national and international boards, including CBSE,JEE,NEET, ICSE, IGCSE, IB , AS & A Levels, and O Levels, providing subject-specific guidance tailored to each student’s learning style. We also offer focused coaching for competitive and standardized tests such as the SAT, AP, JEE, NEET, and other entrance exams, ensuring students are fully prepared with concept clarity and exam strategies. Every class is personalized to match the learner’s goals, pace, and academic background, creating a flexible and supportive environment for success—whether you're aiming for board excellence, global university admissions, or professional advancement.
                 </div>
             </div>
             <div class="faq-item">
@@ -389,16 +389,16 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="copyright">
-                © 2024.Vedantu.com. All rights reserved
+                © 2025.Sri Academics.com. All rights reserved
             </div>
             <div class="footer-links">
                 <a href="privacy.html" target="_blank">Privacy policy</a>
                 <a href="terms.html" target="_blank">Terms and conditions</a>
             </div>
             <div class="social-icons">
-                <a href="https://wa.me/918889857170?text=interested" target="_blank" class="social-icon"><img src="/icons/whatsapp.svg" alt="WhatsApp"></a>
+                <a href="https://wa.me/+91 7772094431?text=interested" target="_blank" class="social-icon"><img src="/icons/whatsapp.svg" alt="WhatsApp"></a>
                 <a href="#" class="social-icon"><img src="/icons/linkedin.svg" alt="LinkedIn"></a>
-                <a href="https://www.instagram.com/pandeymanan024" target="_blank" class="social-icon"><img src="/icons/instagram.svg" alt="Instagram"></a>
+                <a href="https://www.instagram.com/sriacademics?utm_source=qr&igsh=OHJ4dmQwbGxpOTJ2" target="_blank" class="social-icon"><img src="/icons/instagram.svg" alt="Instagram"></a>
                 <a href="#" class="social-icon"><img src="/icons/youtube.svg" alt="YouTube"></a>
             </div>
         </div>
